crates/ui/tests/it/snapshots/it__options__restore_defaults_asks_first_and_keeps_the_layout_and_the_keys.snap
---
source: crates/ui/tests/it/options.rs
expression: h.snapshot()
---
                                                                                                    
                                                                                                    
                                                                                                    
                    ┌─ Options ────────────────────────────────────────────────┐                    
                    │                                                          │                    
                    │   Text speed                Fast                         │                    
                    │   Animation speed           Fast                         │                    
                    │   Combat animations         On                           │                    
                    │   Enemy phase speed         Normal                       │                    
                    │   Auto-end turn             Off                          │                    
                    │   Fullscreen                Off                          │                    
                    │   Cursor                    Corners                      │                    
                    │   Music volume              ███████▒░░  75               │                    
                    │   Sound ╔══════════════════════════════════════╗         │                    
                    │         ║                                      ║         │                    
                    │   Layout║ Restore every option to its default? ║         │                    
                    │   Key bi║ f yes / d no                         ║         │                    
                    │         ║                                      ║         │                    
                    │   Reset ╚══════════════════════════════════════╝         │                    
                    │   Restore defaults                                       │                    
                    │                                                          │                    
                    │                                                          │                    
                    └──────────────────────────────────────────────────────────┘                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                            f yes · d no                                            
--- colours ---
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaabbcccccccccbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaabdddddddddeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedddddddddbaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaabdddddddddeddddddddddddddddddddddddddddddddddddddedddddddddbaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaabdddddddddeddddddddddddddddddddddddddddddddddddddedddddddddbaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaabdddddddddedffffffffffffdddddddddddddddddddddddddedddddddddbaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaabdddddddddeddddddddddddddddddddddddddddddddddddddedddddddddbaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaabdddddddddeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedddddddddbaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaabddggggggggggggggggggddddddddddddddddddddddddddddddddddddddbaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhhhhhhaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
--- legend ---
a = fg:text bg:black
b = fg:panel_border bg:panel_bg
c = fg:text_highlight bg:panel_bg
d = fg:text bg:panel_bg
e = fg:panel_border_focus bg:panel_bg
f = fg:text_dim bg:panel_bg
g = fg:panel_bg bg:panel_border_focus
h = fg:text_dim bg:black
